--- a/app/resource/resource.qrc
+++ b/app/resource/resource.qrc
@@ -192,6 +192,9 @@
         <file>images/logo/Wastebasket.svg</file>
         <file>images/logo/Whale.svg</file>
         <file>images/logo/Window.svg</file>
+        <file>images/png/1.png</file>
+        <file>images/png/2.png</file>
+        <file>images/png/3.png</file>
         <file>images/png/ShakaPackager.png</file>
         <file>images/shoko.png</file>
         <file>images/sponsor.jpg</file>
