--- a/app/resource/resource.qrc
+++ b/app/resource/resource.qrc
@@ -200,6 +200,7 @@
         <file>images/sponsor.jpg</file>
         <file>images/tips.png</file>
         <file>images/todo.png</file>
+        <file>qss/dark/app_interface.qss</file>
         <file>qss/dark/gallery_interface.qss</file>
         <file>qss/dark/home_interface.qss</file>
         <file>qss/dark/icon_interface.qss</file>
@@ -210,6 +211,7 @@
         <file>qss/dark/sample_card.qss</file>
         <file>qss/dark/setting_interface.qss</file>
         <file>qss/dark/view_interface.qss</file>
+        <file>qss/light/app_interface.qss</file>
         <file>qss/light/gallery_interface.qss</file>
         <file>qss/light/home_interface.qss</file>
         <file>qss/light/icon_interface.qss</file>
