--- a/app/resource/qss/light/log_interface.qss
+++ b/app/resource/qss/light/log_interface.qss
@@ -1,4 +1,4 @@
-LogInterface, #view {
+LogInterface, LoguruInterface, #view {
     border: none;
     background: transparent
 }
@@ -34,4 +34,13 @@ LogItem {
 LogItem:hover {
     background-color: rgba(0, 0, 0, 0.02);
     border-color: rgba(0, 0, 0, 0.12);
+}
+
+TransparentToggleToolButton, ToggleToolButton {
+    background-color: transparent;
+    border-radius: 8px;
+}
+
+TransparentToggleToolButton:checked {
+    background-color: rgba(255, 255, 255, 0.1);
 }
