增加日志界面設置跳轉 | 修改日志顔色設置卡片為直觀方式

--- a/app/resource/resource.qrc
+++ b/app/resource/resource.qrc
@@ -168,6 +168,7 @@
         <file>images/png/kunkun.png</file>
         <file>images/png/logo-m.png</file>
         <file>images/png/logo.png</file>
+        <file>images/png/logo1.png</file>
         <file>images/png/shoko.png</file>
         <file>images/png/tips.png</file>
         <file>images/png/todo.png</file>
