--- a/app/resource/qss/light/log_interface.qss
+++ b/app/resource/qss/light/log_interface.qss
@@ -21,8 +21,8 @@ ScrollArea {
 }
 
 #LogItem {
-    border-left: 3px solid {border_color};
-    background-color: {config['bg_color']};
+    border-left: 3px solid #0078d4;
+    background-color: rgba(0, 120, 212, 0.05);
 }
 
 LogItem {
