--- a/app/resource/resource.qrc
+++ b/app/resource/resource.qrc
@@ -163,6 +163,7 @@
         <file>images/png/MusicNote.png</file>
         <file>images/png/ShakaPackager.png</file>
         <file>images/png/alarms.png</file>
+        <file>images/png/app.png</file>
         <file>images/png/header.png</file>
         <file>images/png/header1.png</file>
         <file>images/png/kunkun.png</file>
